Deleted the temporarily commented out old version of the bat file commands and replaced it with a new one.